# project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
script/: bootstrap  bootstrap.py  config  config.py  setup
