[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["gpfl <gustavopereiraflores@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.9.2"
pandas = "^2.1.4"
numpy = "^1.26.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
jupyterlab = "^4.0.10"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
